#  Edit the following fields to match your project

[project]
name = "mets-nodes"
description = "Random nodes for now, may split them out later into properly maintained repos."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["",]  # e.g.) ["numpy==1.18.1", ]

[project.urls]
Repository = "https://github.com/Mets3D/mets-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mets3d"
DisplayName = "Mets-Nodes"
Icon = ""
